tests/fixtures/syntax_rules/pos/r004-any-error.ts
// Positive: Effect error channel uses `any` — triggers TS-EFFECT-R004
import { Effect } from "effect";

export function parseFile(path: string): Effect.Effect<string, any, never> {
  return Effect.succeed("content");
}
